--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.jakewharton.timber:timber:4.1.0'
+    compile 'com.squareup:otto:1.3.8'
+
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'junit:junit:4.12'
 }
