--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     compileSdkVersion 23
     // sdkmanager has problems downloading 23.0.2
     // https://github.com/JakeWharton/sdk-manager-plugin/issues/101
+    //noinspection GradleDependency
     buildToolsVersion "23.0.1"
 
     defaultConfig {
@@ -20,6 +21,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    // Always show the result of every unit test, even if it passes.
+    testOptions.unitTests.all {
+        testLogging {
+            events 'passed', 'skipped', 'failed'
+        }
+    }
 }
 
 dependencies {
@@ -33,4 +40,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile ('org.powermock:powermock-api-mockito:1.6.4') {
+        exclude module: 'hamcrest-core'
+        exclude module: 'objenesis'
+    }
+    testCompile ('org.powermock:powermock-module-junit4:1.6.4') {
+        exclude module: 'hamcrest-core'
+        exclude module: 'objenesis'
+    }
 }
